Drop minted support for now. Enable if required

--- a/notes.latex
+++ b/notes.latex
@@ -101,8 +101,8 @@ $endif$
 $if(lhs)$
 \lstnewenvironment{code}{\lstset{language=Haskell,basicstyle=\small\ttfamily}}{}
 $endif$
-\usepackage{minted}
-\usemintedstyle{manni}
+%\usepackage[cachedir={/tmp/mintedcache}]{minted}
+%\usemintedstyle{manni}
 $if(highlighting-macros)$
 $highlighting-macros$
 $endif$
